--- a/netflix.html
+++ b/netflix.html
@@ -20,18 +20,23 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <form>
         <label for="email"></label>
-        <input type="email" id="" placeholder="Email adderess">
+        <input type="email" id="" placeholder="Email address">
         <button type="Get Started">Get Started</button>
         </form>
     </div>
 </div>
 <!----Enjoy on TV-->
 <section class="tv">
-    <video autoplay loop muted plays-inline class="back-video">
-        <source src="" type="video/mp4">
-    </video>
-    <h1>Enjoy on your TV</h1>
-    <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+    <div class="row">
+        <div class="text-col">
+            <h1>Enjoy on your TV</h1>
+            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+        <div class="img-col">
+            <img src="tv (1).png" class="img">
+            <video src="video-tv-0819 (2).mp4" autoplay loop muted>
+            </video>
+        </div>
 </section>
 </body>
 </html>
